--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pradumansharma",
-  "homepage": "https://praduman99.github.io/Official_Portfolio/",
+  "homepage": "https://praduman99.github.io/pradumansharma",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
